--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.49.8"
   }
 }
