--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@sanity/client": "^3.1.0",
     "framer-motion": "^6.2.8",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.8.0",
